  - Added text-line.@format attribute like display.@format
  - Field values are not automatically converted to strings before going
    to the FTL file for more control over formatting
  - Added screen.always-actions element with actions that will run
    whenever the screen is in the path, whether rendered or not, and
    before both rendering screens and running transitions
- Service Facade
  - Inline and script services can leave out parameter values in the
    context and they will be picked up, instead of setting explicitly in
    result Map
  - When auto-parameters has an entity-name specified the generated
    parameters will have entity-name and field-name attributes, and the
    auto-fields-service now looks for those to do better fields based on
    the entity field details
- Entity Facade
  - Added datasource.@startup-add-missing option; set to true to check
    tables for all entities in the database on startup and create missing
    ones
  - Added database.@use-schema-for-all option; set to true to include the
    schema name for non-table meta data (constraints, indexes, etc)
  - Entity find on a view-entity now automatically determines which
    member-entities to join in based on the fields selected, in order by,
    and in conditions; with this in place the need for DynamicViewEntity is
    minimal because you can just select the relevant fields and not worry
    about tables being joined in to the query that are not needed; this
    makes it much easier to write queries that will run well on large
    databases
  - Support for java.util.UUID sequenced primary IDs; can be configured
    per-entity and/or per-datasource
  - Added eeca.@get-entire-entity attribute to make sure we have the entire
    record and not just PK fields before doing update and delete ops
  - Improved handling and options for binary/blob fields
- Resource Facade
  - ExampleContent entity and corresponding screen that supports
    uploading and downloading JCR content